--- a/doc/ircd.conf.example
+++ b/doc/ircd.conf.example
@@ -242,7 +242,7 @@ privset "server_bot" {
 
 privset "global_op" {
 	extends = "local_op";
-	privs = oper:global_kill, oper:routing, oper:kline, oper:unkline, oper:xline,
+	privs = oper:helpop, oper:global_kill, oper:routing, oper:kline, oper:unkline, oper:xline,
 		oper:resv, oper:mass_notice, oper:remoteban;
 };
 
